--- a/src/assets/styles.module.css
+++ b/src/assets/styles.module.css
@@ -18,14 +18,19 @@
 
 .highlightedText {
 	color: var(--green);
-	font-size: 20px;
+}
+
+.ghostText {
+	color: var(--gray);
 }
 
 .button {
 	width: 100%;
 	height: 60px;
 	box-sizing: border-box;
+	flex-grow: 1;
 	border: none;
+	border: 2px solid var(--purple);
 	background-color: var(--purple);
 	border-radius: 16px;
 	color: var(--white);
@@ -35,4 +40,10 @@
 
 .button:hover {
 	cursor: pointer;
+}
+
+.submitButton {
+	composes: button;
+	border: 2px solid var(--green);
+	background-color: var(--green);
 }
