--- a/src/views/input-words-view/index.module.css
+++ b/src/views/input-words-view/index.module.css
@@ -14,6 +14,14 @@
 	composes: subText from "@/assets/styles.module.css";
 }
 
+.highlightedText {
+	composes: highlightedText from "@/assets/styles.module.css";
+}
+
+.ghostText {
+	composes: ghostText from "@/assets/styles.module.css";
+}
+
 .button {
 	composes: button from "@/assets/styles.module.css";
 }
