fixed the ios screen size

--- a/src/app.module.css
+++ b/src/app.module.css
@@ -1,7 +1,10 @@
+body {
+	background-color: var(--black);
+}
+
 .app {
 	min-height: 100vh;
 	min-height: stretch;
-	background-color: var(--black);
 }
 
 .container {
