--- a/src/components/select-team/index.module.css
+++ b/src/components/select-team/index.module.css
@@ -1,10 +1,10 @@
-.teamsConfigurations {
+.teamsSets {
 	display: flex;
 	flex-direction: column;
 	gap: 24px;
 }
 
-.teamsConfiguration {
+.teamsSet {
 	display: flex;
 	width: 100%;
 	box-sizing: border-box;
@@ -19,22 +19,22 @@
 	background-color: var(--green);
 }
 
-.teamsPlayers {
+.players {
 	display: flex;
 	flex-direction: column;
 	color: var(--gray);
 	font-size: 20px;
 }
 
-.selected .teamsPlayers {
+.selected .players {
 	color: var(--white);
 }
 
-.teamsConfiguration:hover {
+.teamsSet:hover {
 	cursor: pointer;
 }
 
-.teamsCount {
+.teamsNumber {
 	width: 60px;
 	font-size: 40px;
 	text-align: center;
