--- a/src/app.module.css
+++ b/src/app.module.css
@@ -7,7 +7,8 @@ body {
 }
 
 .container {
-	max-width: 390px;
+	min-width: 300px;
+	max-width: 600px;
 	box-sizing: border-box;
 	padding: 36px 45px;
 	margin: 0 auto;
