--- a/src/views/ready-view/index.module.css
+++ b/src/views/ready-view/index.module.css
@@ -1,31 +1,14 @@
-.bigTitle {
-	composes: bigTitle from "@/assets/styles.module.css";
+.popupButtons {
+	display: flex;
+	gap: var(--sizeSmall);
 }
 
-.block {
-	composes: block from "@/assets/styles.module.css";
+.alertButton {
+	background-color: var(--red);
 }
 
-.mainText {
-	composes: mainText from "@/assets/styles.module.css";
-}
-
-.subText {
-	composes: subText from "@/assets/styles.module.css";
-}
-
-.highlightedText {
-	composes: highlightedText from "@/assets/styles.module.css";
-}
-
-.ghostText {
-	composes: ghostText from "@/assets/styles.module.css";
-}
-
-.button {
-	composes: button from "@/assets/styles.module.css";
-}
-
-.submitButton {
-	composes: submitButton from "@/assets/styles.module.css";
+.popup {
+	display: flex;
+	flex-direction: column;
+	gap: var(--sizeNormal);
 }
