--- a/src/components/ui/page/index.module.css
+++ b/src/components/ui/page/index.module.css
@@ -3,6 +3,6 @@
 }
 
 .title {
-	margin-bottom: 36px;
-	font-size: 64px;
+	margin-bottom: var(--sizeExtraBig);
+	font-size: var(--pageTitleFontSize);
 }
